Fix javascript click handlers not working on iOS

--- a/resources/assets/sass/sections/_events-info-pane.scss
+++ b/resources/assets/sass/sections/_events-info-pane.scss
@@ -28,6 +28,7 @@
 }
 
 .event-info--close {
+	cursor: pointer;
 	position: absolute;
 	right: 60px;
 	top: 32px;
