--- a/resources/assets/sass/sections/_events-list.scss
+++ b/resources/assets/sass/sections/_events-list.scss
@@ -50,6 +50,10 @@
 	}
 }
 
+.event {
+	cursor: pointer;
+}
+
 .event--icon svg, .event--icon img {
 	width: 100%;
 }
