--- a/resources/assets/sass/sections/_filters-overlay.scss
+++ b/resources/assets/sass/sections/_filters-overlay.scss
@@ -1,3 +1,7 @@
+.filter {
+	cursor: pointer;
+}
+
 .filter-overlay-bg {
 	background: $highlight;
 	width: 20px;
